# potential-unicorn

./: .env.example  .gitignore  DEPLOYMENT_READY.md  FOLDER_STRUCTURE.md  GETTING_STARTED.md  LICENSE  LOCAL_TESTING_GUIDE.md  NEW_FEATURES_SUMMARY.md  PROJECT_PLAN.md  README.md  SETUP_GUIDE.md  TECH_STACK.md  YOUTUBE_AND_CREDIBILITY_GUIDE.md  ai_debug_response.json  deploy-local.sh  local-server.sh  package.json  pnpm-lock.yaml  run-regression-tests.sh  temp_ekantipur.html  temp_ok.html  temp_setopati.html  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
services/ai-service/: .env.example  .gitignore  BUILD_COMPLETE.md  DIRECTORY_STRUCTURE.txt  Dockerfile  INSTALLATION_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
services/ai-service/app/: __init__.py  main.py
services/ai-service/app/agents/: __init__.py  base_agent.py  moderator.py
services/ai-service/app/api/v1/: credibility.py  moderate.py  summarize.py  translate.py
services/ai-service/app/core/: __init__.py  config.py
services/ai-service/app/models/: __init__.py  article.py
services/ai-service/app/services/: __init__.py  credibility_scorer.py  summarizer.py  translator.py
services/ai-service/app/tasks/: __init__.py  celery_app.py  summarize_task.py
services/ai-service/scripts/: start.sh  test-api.sh
services/ai-service/tests/: conftest.py  test_credibility_api.py  test_health.py  test_main.py  test_moderate_api.py  test_summarize_api.py  test_summarizer.py  test_translate_api.py
tests/: package.json  (+3 more)
(+169 files in other folders)
